<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PagePlusBalance retrieves your balance from PagePlusCellular.com, currently for android phones.
  ~ Copyright (C) 2013 Travis Burtrum (moparisthebest)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Page Plus Balance</string>
    <string name="plan_data">Balance:\nPlan:\nMinutes:\nSMS:\nData:\nLast Updated: Never\n</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="phone">Phone name:</string>
    <string name="button">Save / Grab Data via website</string>

    <string name="pp_only">Use only pagepluscellular.com (uses significantly more data)</string>

    <string name="sms_grab">Grab Data via SMS</string>
</resources>
