<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PagePlusBalance retrieves your balance from PagePlusCellular.com, currently for android phones.
  ~ Copyright (C) 2013 Travis Burtrum (moparisthebest)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ScrollView01"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

        <TextView android:text="@string/plan_data" android:id="@+id/plan_data" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"></TextView>

        <RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

            <TextView android:text="@string/username" android:id="@+id/TextView01" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"></TextView>
            <EditText android:text="" android:layout_toRightOf="@+id/TextView01" android:id="@+id/username"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>

            <TextView android:id="@+id/TextView02" android:text="@string/password" android:layout_below="@+id/username"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_toLeftOf="@+id/password"></TextView>
            <EditText android:text="" android:password="true" android:layout_toRightOf="@+id/TextView01"
                      android:id="@+id/password" android:layout_below="@+id/username" android:layout_width="fill_parent"
                      android:layout_height="wrap_content"></EditText>

            <TextView android:id="@+id/TextView03" android:text="@string/phone" android:layout_below="@+id/password"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_toLeftOf="@+id/phone"></TextView>
            <EditText android:text="" android:layout_toRightOf="@+id/TextView01" android:id="@+id/phone"
                      android:layout_below="@+id/password" android:layout_width="fill_parent"
                      android:layout_height="wrap_content"></EditText>

            <Button android:layout_toRightOf="@+id/TextView01" android:id="@+id/save" android:layout_below="@+id/phone"
                    android:text="@string/button" android:layout_height="wrap_content"
                    android:layout_width="wrap_content"></Button>

            <CheckBox android:layout_width="wrap_content" android:text="@string/pp_only"
                      android:layout_below="@+id/save" android:id="@+id/pp_only" android:layout_height="wrap_content"
                      android:layout_toRightOf="@+id/TextView01"></CheckBox>

            <Button android:layout_toRightOf="@+id/TextView01" android:id="@+id/sms" android:layout_below="@+id/pp_only"
                    android:text="@string/sms_grab" android:layout_height="wrap_content"
                    android:layout_width="wrap_content"></Button>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>